# godot-xreal

./: .gdlintrc  .gitattributes  .gitignore  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  README_ja.md  export_presets.cfg  godot_xreal.gdextension  godot_xreal.gdextension.uid  project.godot
.github/: cliff.toml
demo/: anchor_manager.gd  anchor_manager.gd.uid  ar_scene.gd  ar_scene.gd.uid  ar_scene.tscn  blend_manager.gd  blend_manager.gd.uid  camera_preview.gd  camera_preview.gd.uid  camera_preview.tscn  capture_manager.gd  capture_manager.gd.uid  gallery_helper.gd  gallery_helper.gd.uid  hand_visualizer.gd  hand_visualizer.gd.uid  image_manager.gd  image_manager.gd.uid  main.gd  main.gd.uid  main.tscn  mesh_manager.gd  mesh_manager.gd.uid  phone_pointer.gd  phone_pointer.gd.uid  phone_screen.gd  phone_screen.gd.uid  phone_screen.tscn  stream_manager.gd  stream_manager.gd.uid  stream_pairing.gd  stream_pairing.gd.uid  touch_controller.gd  touch_controller.gd.uid  xreal_blend_2d.gdshader  xreal_image_marker.gdshader  xreal_image_marker.gdshader.uid  xreal_ycbcr.gdshader  xreal_ycbcr_2d.gdshader  xreal_ycbcr_2d.gdshader.uid
docs/: README.md  android-export-plugin-migration.md  android-setup.md  build-and-release.md  camera-feed-plan.md  codex-headlock-analysis.md  codex-righteye-analysis.md  frame-submission-plan.md  glasses-display-position.md  hotplug-session-recovery.md  input-plan.md  multiview-investigation.md  native-api-reference.md  port-plan.md  reverse-engineering.md  roll-tracking-investigation.md
dummy/: gdext_dummy.c  libgodot_xreal_dummy.macos.arm64.dylib  libgodot_xreal_dummy.macos.x86_64.dylib  stub_classes.inc  stub_docs.inc  (+1 more)
(+131 files in other folders)
